--- a/src/assets/_abstracts/_easing.scss
+++ b/src/assets/_abstracts/_easing.scss
@@ -1,6 +1,6 @@
-// create a global custom variables for easing tokens
-// example:
-/*:root {
-  --base-ease: cubic-bezier(.17, .67, .17, 1.01);
-  ...
-}*/
+:root {
+  --ease-out: cubic-bezier(.17, .67, .17, 1.01);
+  --ease-elastic: cubic-bezier(.08, 1.48, .69, 1.14);
+  --animationTime: .4s;
+  --slowAnimationTime: .8s;
+}
