feature: add abstracts file to use variables

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,6 +1,11 @@
+@import './tools/size';
 @import './_abstracts/colors';
-@import './_abstracts/fonts';
-@import './_abstracts/sizes';
+@import './_abstracts/radius';
 @import './_abstracts/easing';
-@import './mixins/animations';
-@import './layers/behaviours.scss';
+@import './_abstracts/spacing';
+
+// @import './_abstracts/fonts';
+// @import './_abstracts/sizes';
+// @import './_abstracts/easing';
+// @import './mixins/animations';
+// @import './layers/behaviours.scss';
