feature: add abstract for font handle

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -3,8 +3,8 @@
 @import './_abstracts/radius';
 @import './_abstracts/easing';
 @import './_abstracts/spacing';
+@import './_abstracts/fonts';
 
-// @import './_abstracts/fonts';
 // @import './_abstracts/sizes';
 // @import './_abstracts/easing';
 // @import './mixins/animations';
