feature: add mixins to create animations and keyframes

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -4,8 +4,6 @@
 @import './_abstracts/easing';
 @import './_abstracts/spacing';
 @import './_abstracts/fonts';
-
-// @import './_abstracts/sizes';
-// @import './_abstracts/easing';
-// @import './mixins/animations';
-// @import './layers/behaviours.scss';
+// mixins
+@import './mixins/createAnimations';
+@import './mixins/createKeyframes.scss';
