feature: add tailwind configuration for box-shadow

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -4,6 +4,8 @@
 @import './_abstracts/easing';
 @import './_abstracts/spacing';
 @import './_abstracts/fonts';
+@import './_abstracts/elevations';
+
 // mixins
 @import './mixins/createAnimations';
 @import './mixins/createKeyframes.scss';
