--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -1,14 +1,39 @@
 .base-button {
     $basebutton: &;
+    --hover-color: bg-logo-400;
 
     @apply bg-default-none border-none outline-none; // reset
-    @apply text-neutral-100 font-default;
+    @apply text-neutral-100 font-default bg-neutral-300;
+    @apply transition-spacing transition-colors duration-[var(--animationTime)];
 
-    &:not(disabled) {
-        @apply cursor-pointer
+    &:not(:disabled) {
+        @apply cursor-pointer;
+
+        @media(hover) {
+            &:hover {
+                @apply shadow-light;
+
+                &#{$basebutton}--is-primary {
+                    @apply bg-logo-400
+                }
+
+                &#{$basebutton}--is-secondary {
+                    @apply bg-logo-100
+                }
+            }
+
+            &:active {
+                &#{$basebutton}--is-primary {
+                    @apply bg-logo-500
+                }
+
+                &#{$basebutton}--is-secondary {
+                    @apply bg-logo-400 text-neutral-100
+                }
+            }
+        }
     }
 
-    background: red;
     &--is {
         &-default {
             @apply px-md py-xmd;
@@ -18,6 +43,20 @@
         &-small {
             @apply px-xmd py-sm;
             @apply rounded-md text-md
+        }
+
+        &-primary {
+            &:not(:disabled) {
+                @apply bg-logo-600
+            }
+        }
+
+        &-secondary {
+            &:not(:disabled) {
+                @apply bg-neutral-100
+            }
+
+            @apply text-logo-600 border-logo-600 border-[1px] border-solid
         }
     }
 }
