--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -1,8 +1,8 @@
 .base-button {
     $basebutton: &;
-    --hover-color: bg-logo-400;
-
     @apply bg-default-none border-none outline-none; // reset
+
+    @apply flex items-center gap-sm justify-between relative;
     @apply text-neutral-100 font-default bg-neutral-300;
     @apply transition-all duration-[var(--animationTime)];
 
@@ -35,7 +35,12 @@
 
         &#{$basebutton}--has {
             &-loading {
-                @apply pr-xxlg
+               @apply gap-md;
+
+                &::after {
+                    @apply w-md aspect-square inline-block content-[''];
+                    @apply border-2 border-neutral-100 border-solid border-b-logo-400 rounded-[50%];
+                }
             }
         }
     }
