feature: add updateValue method for input event and dirty state

--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -8,7 +8,7 @@
       $duration-out: .2s
     );
 
-    @apply bg-default-none border-none outline-none; // reset
+    @apply bg-default-none border-none outline-none select-none; // reset
 
     @apply inline-flex items-center gap-sm justify-between relative;
     @apply text-neutral-100 font-default bg-neutral-300;
