--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -10,4 +10,7 @@
 
   --color-neutral-300: hsla(213, 27%, 84%, 1);
   --color-neutral-100: hsla(0, 0%, 100%, 1);
+
+  --color-warning-100: hsla(0, 78%, 68%, 1);
+  --color-success-100: hsla(142, 71%, 45%, 1)
 }
