feature: add story for icon component

--- a/src/app/ui/components/base/base-icon/BaseIcon.scss
+++ b/src/app/ui/components/base/base-icon/BaseIcon.scss
@@ -1,7 +1,7 @@
 .base-icon {
     $baseicon: &;
 
-    @apply h-auto aspect-square flex items-center justify-center;
+    @apply h-auto aspect-square inline-flex items-center justify-center;
 
     > svg {
         @apply flex items-center justify-center;
