--- a/src/assets/_abstracts/_fonts.scss
+++ b/src/assets/_abstracts/_fonts.scss
@@ -12,10 +12,11 @@
     --font-style-normal: normal;
     --font-style-bold: bold;
 
-    --font-size-xl: px2rem(calc(30));
-    --font-size-regular: px2rem(calc(16));
-    --font-size-sm: px2rem(calc(14));
-    --font-size-xs: px2rem(calc(12));
+    --font-size-xl: #{px2rem(calc(30))};
+    --font-size-regular: #{px2rem(calc(16))};
+    --font-size-sm: #{px2rem(calc(14))};
+    --font-size-xs: #{px2rem(calc(12))};
+    --font-size-xxs: #{px2rem(calc(10))};
 
     --font-underline: underline
 }
