feature: add icon to input component whit transition

--- a/src/app/ui/components/base/base-icon/BaseIcon.scss
+++ b/src/app/ui/components/base/base-icon/BaseIcon.scss
@@ -1,7 +1,8 @@
 .base-icon {
     $baseicon: &;
+    --base-color: hsla(215, 20%, 65%, 1);
 
-    @apply h-auto aspect-square inline-flex items-center justify-center;
+    @apply h-auto aspect-square inline-flex items-center justify-center text-[var(--base-color)];
 
     > svg {
         @apply flex items-center justify-center;
