--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -2,9 +2,9 @@
     $baseinput: &;
 
     @apply py-sm px-xmd flex items-center gap-xsm relative;
-    @apply bg-background-300 border-background-200 border-solid border-[1px] rounded-xlg;
+    @apply bg-background-300 border-background-200 border-solid border-[1px] rounded-md;
     @apply transition-colors duration-[var(--animationTime)];
-
+    
     &:not(:has(input:invalid)) {
         &:focus-within {
             &:not(:has(input:hover)) {
