--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -12,5 +12,8 @@
   --color-neutral-100: hsla(0, 0%, 100%, 1);
 
   --color-warning-100: hsla(0, 78%, 68%, 1);
-  --color-success-100: hsla(142, 71%, 45%, 1)
+  --color-success-100: hsla(142, 71%, 45%, 1);
+
+  --color-variant-100: hsla(243, 100%, 69%, 1);
+
 }
