--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -9,6 +9,7 @@
   --color-background-300: hsla(220, 33%, 98%, 1);
 
   --color-neutral-300: hsla(213, 27%, 84%, 1);
+  --color-neutral-200: hsla(210, 40%, 96%, 1);
   --color-neutral-100: hsla(0, 0%, 100%, 1);
 
   --color-warning-100: hsla(0, 78%, 68%, 1);
