reafctor: change border bottom z-index in TabsBar tool

--- a/src/app/ui/components/tools/tabs-bar/TabsBar.scss
+++ b/src/app/ui/components/tools/tabs-bar/TabsBar.scss
@@ -16,6 +16,7 @@
     }
 
     &__list {
-        @apply flex flex-nowrap m-none gap-xxxlg
+        @apply flex flex-nowrap m-none gap-xxxlg;
+        @apply z-[1]
     }
 }
