--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -16,5 +16,5 @@
   --color-success-100: hsla(142, 71%, 45%, 1);
 
   --color-variant-100: hsla(243, 100%, 69%, 1);
-
+  --color-outline: hsla(295, 73%, 46%, 1);
 }
