feature: add summary element and update transition component with easing prop

--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -64,7 +64,7 @@
         }
 
         &:read-only {
-            @apply cursor-not-allowed
+            @apply cursor-not-allowed select-none pointer-events-none
         }
     }
 }
