feature: add timing to improve transition component

--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -9,7 +9,7 @@
         @apply no-underline
     }
 
-    &:focus-within {
+    &:focus-visible {
         &:not(:hover) {
             @apply shadow-focus
         }
