--- a/src/assets/_abstracts/_easing.scss
+++ b/src/assets/_abstracts/_easing.scss
@@ -3,4 +3,5 @@
   --ease-elastic: cubic-bezier(.08, 1.48, .69, 1.14);
   --animationTime: .5s;
   --slowAnimationTime: .8s;
+  --outAnimationTime: .3s
 }
