--- a/src/app/ui/components/elements/accordion-info/AccordionInfo.scss
+++ b/src/app/ui/components/elements/accordion-info/AccordionInfo.scss
@@ -1,23 +1,44 @@
 .accordion-info {
     $accordionInfo: &;
+    --arrow-transform: rotate(45deg) translateY(-2px);
 
     @apply py-xmd px-sm;
     @apply select-none rounded-xsm;
+    @apply font-default;
     @apply transition-colors duration-[var(--animationTime)];
 
-    &:focus-within{
-        @apply shadow-focus
+    &:not(:hover) {
+        &:focus-within{
+            @apply shadow-focus
+        }
+    }
+
+    &[open] {
+        > summary {
+            @apply mb-sm;
+
+            &::after {
+                --arrow-transform: rotate(-135deg) translateY(-2px);
+            }
+        }
     }
 
     &__summary {
         @apply flex items-center justify-center m-none gap-sm;
+        @apply text-xsm text-logo-300;
         @apply outline-none cursor-pointer;
+        @apply transition-spacing;
 
         &::after {
             @apply inline-block p-xsm ml-auto;
             @apply content-[''] border-solid border-logo-300 border-t-0 border-r-2 border-b-2 border-l-0;
             @apply transition-transform duration-[var(--animationTime)];
-            transform: rotate(45deg) translateX(-2px)
+            transform: var(--arrow-transform)
         }
+    }
+
+    &__content {
+        @apply p-sm;
+        @apply rounded-sm bg-neutral-200;
     }
 }
